--- a/DebuggingExpl/src/styles.css
+++ b/DebuggingExpl/src/styles.css
@@ -19,10 +19,11 @@ body {
         margin: 0 auto;
         text-align: center;
     }
-    .table-body {
+/*    .table-body {
         border: 1px solid black;
         width: 100%;
     }
+
     .table-header {
         border: 1px solid black;
         width: 100%;
@@ -34,6 +35,7 @@ body {
         width: 100%;
         padding: 10px;
         margin: 0 auto;
+        text-align: center;
     }
     .table-cell {
         border: 1px solid black;
@@ -50,4 +52,5 @@ body {
         align-items: center;
         text-align: center;
     }
+        */
 }
